--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,34 @@
-# Use an official, slim Python image as the base
-FROM python:3.12-slim
+# backend/Dockerfile
+FROM python:3.12-slim-bookworm
 
-# Set the working directory inside the container
+# ---- system deps ----
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        build-essential curl && \
+    rm -rf /var/lib/apt/lists/*
+
+# ---- Poetry ----
+ENV POETRY_VERSION=2.1.1 \
+    POETRY_HOME=/opt/poetry \
+    POETRY_VIRTUALENVS_CREATE=false \
+    POETRY_CACHE_DIR=/var/cache/pypoetry
+RUN curl -sSL https://install.python-poetry.org | python3 - --version $POETRY_VERSION \
+ && ln -s $POETRY_HOME/bin/poetry /usr/local/bin/poetry
+
+# ---- Python runtime tweaks ----
+ENV PYTHONFAULTHANDLER=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=off \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_DEFAULT_TIMEOUT=100
+
 WORKDIR /app
 
-# Set environment variables to prevent Poetry from creating a virtual env inside the container
-# and to prevent it from asking interactive questions.
-ENV POETRY_NO_INTERACTION=1 \
-    POETRY_VIRTUALENVS_CREATE=false \
-    POETRY_CACHE_DIR='/var/cache/pypoetry'
+# Only copy dependency metadata first for better layer‑caching
+COPY pyproject.toml poetry.lock* README.md /app/
+RUN poetry install --no-interaction --no-ansi --no-root
 
-# Install Poetry
-RUN pip install poetry
+# Then copy the rest of the source
+COPY . /app
 
-# Copy only the dependency definition files to leverage Docker's layer caching.
-# This layer only gets rebuilt if your dependencies change.
-COPY pyproject.toml poetry.lock ./
-
-# Install project dependencies
-RUN poetry install --no-dev --no-root
-
-# Copy the rest of your application's source code
-COPY . .
-
-# Command to run the Uvicorn server when the container starts
-# It will be accessible on port 8000
-CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+EXPOSE 8000
+CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
