--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,31 +1,44 @@
+# pyproject.toml — compatible with Poetry ≥2.1
+# -------------------------------------------------
 [project]
-name = "ai-quiz-generator-backend"
-version = "0.0.1"
-description = "A buzzfeed-like quiz generator"
-authors = [
-    {name = "Eric Brooks",email = "quizzicalcreator@gmail.com"}
+name            = "ai-quiz-generator-backend"
+version         = "0.0.1"
+description     = "A BuzzFeed-style quiz generator"
+authors         = [
+  { name = "Eric Brooks", email = "quizzicalcreator@gmail.com" }
 ]
-license = {text = "MIT"}
-readme = "README.md"
+license         = { text = "MIT" }
+readme          = "README.md"
 requires-python = ">=3.11"
+
+# --- runtime dependencies (PEP 508 syntax) -------------
 dependencies = [
-    "fastapi (>=0.116.1,<0.117.0)",
-    "pydantic (>=2.11.7,<3.0.0)",
-    "uvicorn[standard] (>=0.35.0,<0.36.0)",
-    "langgraph (>=0.6.2,<0.7.0)",
-    "openai (>=1.98.0,<2.0.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)",
-    "structlog (>=25.4.0,<26.0.0)"
+  "fastapi>=0.116.1,<0.117.0",
+  "pydantic>=2.11.7,<3.0.0",
+  "uvicorn[standard]>=0.35.0,<0.36.0",
+  "langgraph>=0.6.2,<0.7.0",
+  "openai>=1.98.0,<2.0.0",
+  "python-dotenv>=1.1.1,<2.0.0",
+  "structlog>=25.4.0,<26.0.0",
+  "psycopg>=3.1.18,<4.0.0",
+  "sqlalchemy>=2.0.42,<3.0.0",
+  "alembic>=1.16.4,<2.0.0",
+  "pgvector>=0.4.1,<0.5.0"
 ]
 
+# --- Poetry-specific configuration ----------------------
+[tool.poetry]
+# Because your importable code lives in the top-level “backend” package
+packages = [{ include = "backend" }]  # :contentReference[oaicite:2]{index=2}
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.4.1"
+# Dev-only requirements go in a group (Poetry ≥1.2 feature)
+[tool.poetry.group.dev.dependencies]  # :contentReference[oaicite:3]{index=3}
+pytest         = "^8.4.1"
 pytest-asyncio = "^1.1.0"
-httpx = "^0.28.1"
-ruff = "^0.12.7"
+httpx          = "^0.28.1"
+ruff           = "^0.12.7"
 
+# --- build backend --------------------------------------
+[build-system]
+requires = ["poetry-core>=2.1.0"]  # matches the core shipped with Poetry 2.1 :contentReference[oaicite:4]{index=4}
+build-backend = "poetry.core.masonry.api"
