--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,10 @@ dependencies = [
   "psycopg>=3.1.18,<4.0.0",
   "sqlalchemy>=2.0.42,<3.0.0",
   "alembic>=1.16.4,<2.0.0",
-  "pgvector>=0.4.1,<0.5.0"
+  "pgvector>=0.4.1,<0.5.0",
+  "pydantic-settings (>=2.10.1,<3.0.0)",
+  "azure-identity (>=1.23.1,<2.0.0)",
+  "azure-appconfiguration-provider (>=2.1.0,<3.0.0)"
 ]
 
 # --- Poetry-specific configuration ----------------------
