--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,10 +13,10 @@ RUN pip install "poetry==$POETRY_VERSION"
 RUN poetry config virtualenvs.create false
 
 # Copy only the dependency files to leverage Docker's cache
-COPY poetry.lock pyproject.toml ./
+COPY poetry.lock pyproject.toml README.md ./
 
 # Install dependencies, excluding development ones
-RUN poetry install --no-dev --no-interaction --no-ansi
+RUN poetry install --no-root --no-interaction --no-ansi -vvv
 
 
 # Stage 2: The "final" runtime stage
@@ -30,6 +30,9 @@ WORKDIR /app
 # Copy the installed Python packages from the builder stage
 COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 
+# Copy the executables installed by the dependencies (like uvicorn)
+COPY --from=builder /usr/local/bin /usr/local/bin
+
 # Copy your application source code
 COPY --chown=appuser:appuser . .
 
@@ -37,4 +40,4 @@ COPY --chown=appuser:appuser . .
 USER appuser
 
 # Command to run the FastAPI application
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
