--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
   "pgvector>=0.4.1,<0.5.0",
   "pydantic-settings (>=2.10.1,<3.0.0)",
   "azure-identity (>=1.23.1,<2.0.0)",
-  "azure-appconfiguration-provider (>=2.1.0,<3.0.0)"
+  "azure-appconfiguration-provider (>=2.1.0,<3.0.0)",
+  "litellm" >= "^1.35.2"
 ]
 
 # --- Poetry-specific configuration ----------------------
