--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,19 +24,22 @@ dependencies = [
   "sqlalchemy>=2.0.42,<3.0.0",
   "alembic>=1.16.4,<2.0.0",
   "pgvector>=0.4.1,<0.5.0",
-  "pydantic-settings (>=2.10.1,<3.0.0)",
-  "azure-identity (>=1.23.1,<2.0.0)",
-  "azure-appconfiguration-provider (>=2.1.0,<3.0.0)",
-  "litellm" >= "^1.35.2"
+  "pydantic-settings>=2.10.1,<3.0.0",
+  "azure-identity>=1.23.1,<2.0.0",
+  "azure-appconfiguration-provider>=2.1.0,<3.0.0",
+  "litellm>=1.35.2,<2.0.0",
+  "redis>=5.0.7,<6.0.0",
+  "tenacity>=8.5.0,<9.0.0",
+  "langchain-core>=0.3.67,<0.4.0",
 ]
 
 # --- Poetry-specific configuration ----------------------
 [tool.poetry]
 # Because your importable code lives in the top-level “backend” package
-packages = [{ include = "app" }]  # :contentReference[oaicite:2]{index=2}
+packages = [{ include = "app" }]
 
 # Dev-only requirements go in a group (Poetry ≥1.2 feature)
-[tool.poetry.group.dev.dependencies]  # :contentReference[oaicite:3]{index=3}
+[tool.poetry.group.dev.dependencies]
 pytest         = "^8.4.1"
 pytest-asyncio = "^1.1.0"
 httpx          = "^0.28.1"
@@ -44,5 +47,5 @@ ruff           = "^0.12.7"
 
 # --- build backend --------------------------------------
 [build-system]
-requires = ["poetry-core>=2.1.0"]  # matches the core shipped with Poetry 2.1 :contentReference[oaicite:4]{index=4}
+requires = ["poetry-core>=2.1.0"] # matches the core shipped with Poetry 2.1
 build-backend = "poetry.core.masonry.api"
