--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 PROJECT_NAME="YOUR-AZURE-PROJECT-NAME"
+VITE_TURNSTILE_SITE_KEY=1x00000000000000000000AA
+VITE_TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
