Fix for backend config use

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PROJECT_NAME="YOUR-AZURE-PROJECT-NAME"
 VITE_TURNSTILE_SITE_KEY=1x00000000000000000000AA
 VITE_TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
+APP_CONFIG_ENDPOINT=https://example-shared-appcs.azconfig.io
+APP_ENVIRONMENT=development
