--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 ]
 license = { text = "MIT" }
 readme = "README.md"
-requires-python = "^3.11"
+requires-python = ">=3.11, <3.14" # CORRECTED: Added an upper bound to match the dependency
 
 # --- Main Dependencies ---
 dependencies = [
@@ -17,7 +17,6 @@ dependencies = [
     "pydantic>=2.11.7,<3.0.0",
     "uvicorn[standard]>=0.35.0,<0.36.0",
     "langgraph>=0.6.2,<0.7.0",
-    "langgraph-redis>=0.0.6,<0.1.0",
     "openai>=1.98.0,<2.0.0",
     "python-dotenv>=1.1.1,<2.0.0",
     "structlog>=25.4.0,<26.0.0",
@@ -32,7 +31,8 @@ dependencies = [
     "redis>=5.0.7,<6.0.0",
     "tenacity>=8.5.0,<9.0.0",
     "langchain-core>=0.3.67,<0.4.0",
-    "fal-client>=0.1.1" # CORRECTED: Changed from fal to fal-client
+    "fal-client>=0.1.1",
+    "langgraph-checkpoint-redis>=0.0.6"
 ]
 
 # --- Development Dependencies ---
