--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,7 +32,9 @@ dependencies = [
     "tenacity>=8.5.0,<9.0.0",
     "langchain-core>=0.3.67,<0.4.0",
     "fal-client>=0.1.1",
-    "langgraph-checkpoint-redis>=0.0.6"
+    "langgraph-checkpoint-redis>=0.0.6",
+    "langchain-community (>=0.3.27,<0.4.0)",
+    "wikipedia (>=1.4.0,<2.0.0)"
 ]
 
 # --- Development Dependencies ---
