--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,13 @@
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "vite": "^7.0.4"
   }
 }
