--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,6 +26,7 @@ DATABASE_PASSWORD="your-local-db-password"
 
 # API key for the OpenAI or other LLM service.
 OPENAI_API_KEY="sk-xxxxxxxxxxxxxxxxxxxxxxxx"
+GROQ_API_KEY="tbd"
 
 # API key for Cloudflare Turnstile for ensuring users are human
 TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
