add embedding handing to pgvector

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,22 @@
-# docker-compose.yml
 version: "3.9"
 
-# This Docker Compose file sets up the local development environment,
-# including the backend API, a PostgreSQL database with pgvector, and a Redis cache.
-
+# Local development: FastAPI backend, Postgres (pgvector), and Redis.
 services:
-  # The Python backend service running the FastAPI application.
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-      # FIX: Pass build-time arguments from the .env file to the Dockerfile.
-      # This is crucial for the backend to know how to connect to Azure App
-      # Configuration during the container build and at runtime.
+      # Pass build-time args from .env (safe; no secrets required for local)
       args:
         - APP_CONFIG_ENDPOINT=${APP_CONFIG_ENDPOINT}
         - APP_ENVIRONMENT=${APP_ENVIRONMENT}
     env_file:
-      # Loads environment variables from the root .env file for runtime.
       - ./.env
+    # Override service-internal hosts so the backend container connects to other containers
+    environment:
+      DATABASE__HOST: db
+      REDIS__HOST: redis
     volumes:
-      # Mounts the local backend code into the container for live reloading.
       - ./backend:/app
     depends_on:
       db:
@@ -30,7 +26,6 @@ services:
     ports:
       - "8000:8000"
 
-  # The PostgreSQL database service with the pgvector extension for embeddings.
   db:
     image: pgvector/pgvector:0.8.0-pg16
     environment:
@@ -45,10 +40,11 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      # Persists database data across container restarts.
+      # Persist database data across container restarts/rebuilds
       - pgdata:/var/lib/postgresql/data
+      # Ensure pgvector is enabled on DB init
+      - ./backend/db/init:/docker-entrypoint-initdb.d:ro
 
-  # The Redis service for caching and as a checkpointer for the agent graph.
   redis:
     image: redis:alpine
     healthcheck:
@@ -59,6 +55,5 @@ services:
     ports:
       - "6379:6379"
 
-# Defines the named volume for persisting PostgreSQL data.
 volumes:
   pgdata:
