--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,10 +5,41 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Proxy API requests to the backend container
+  location /api/ {
+    # In Docker Compose, 'backend' is the service name that resolves to the backend container
+    proxy_pass http://backend:8000;
+    
+    # Important proxy headers
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    # Handle WebSocket connections if needed in the future
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    
+    # Timeouts for long-running requests (quiz generation can take up to 60 seconds)
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+  }
+
+  # Serve the React app for all other routes
   location / {
-    # This is the key part for SPAs:
-    # If a requested file or directory isn't found,
-    # fall back to serving /index.html.
     try_files $uri $uri/ /index.html;
+    
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+  }
+  
+  # Cache static assets
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    expires 30d;
+    add_header Cache-Control "public, immutable";
   }
 }
