--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,6 +29,9 @@ server {
 
   # Serve the React app for all other routes
   location / {
+    # This is the key part for SPAs:
+    # If a requested file or directory isn't found,
+    # fall back to serving /index.html.
     try_files $uri $uri/ /index.html;
     
     # Security headers
