--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,14 +9,14 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci
 
 # Copy the rest of the application source code
 COPY . .
 
 # Build the production-ready static files
+# Don't set VITE_API_URL here - let Nginx handle the proxying
 RUN npm run build
-
 
 # Stage 2: Serve the static files with Nginx
 FROM nginx:stable-alpine as final
@@ -24,7 +24,7 @@ FROM nginx:stable-alpine as final
 # Copy the built static files from the builder stage into the Nginx serve directory
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy the custom Nginx configuration to handle React Router
+# Copy the custom Nginx configuration with proxy settings
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80 for the web server
