updated example env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,32 +1,55 @@
 # =============================================================================
-# Backend Environment Variables
+# Application Environment
 # =============================================================================
-# Copy this file to .env in the backend/ directory and fill in the values for
-# your local environment. This .env file is NOT committed to Git.
-# =em===========================================================================
-
-# The endpoint of your Azure App Configuration store.
-# You can find this in the Azure Portal on the "Overview" page of your
-# App Configuration resource. It looks like: https://<your-store-name>.azconfig.io
-APP_CONFIG_ENDPOINT="https://your-app-config-store.azconfig.io"
-
-# The label to load from Azure App Configuration.
-# Use 'local' for local development.
 APP_ENVIRONMENT="local"
 
-# --- Secrets (Managed by Azure Key Vault or local .env) ---
-# These are loaded by the application at runtime and are NOT part of the
-# main YAML configuration.
+# To use Azure for configuration, uncomment and set these endpoints.
+# Otherwise, the application will use the values in this file.
+# APP_CONFIG_ENDPOINT="your_azure_app_config_endpoint"
+# AZURE_KEY_VAULT_ENDPOINT="your_azure_key_vault_endpoint"
 
-# Secret key for signing JWT tokens.
-SECRET_KEY="your-super-secret-and-long-random-string"
+# =============================================================================
+# Secret Keys (replace with your actual keys for development)
+# =============================================================================
+SECRET_KEY="a_very_secret_key_for_local_development"
+DATABASE_PASSWORD="postgres"         # Default Postgres password from docker-compose.yml
+OPENAI_API_KEY="your_openai_api_key"
+TURNSTILE_SECRET_KEY="your_turnstile_secret_key"
+FAL_AI_KEY="your_fal_ai_key"
+GROQ_API_KEY="your_groq_api_key"
 
-# Password for the PostgreSQL database user.
-DATABASE_PASSWORD="your-local-db-password"
+# =============================================================================
+# Database and Redis Settings
+# =============================================================================
+DATABASE__HOST="localhost"
+DATABASE__PORT=5432
+DATABASE__USER="postgres"
+DATABASE__DB_NAME="quiz"            # Matches POSTGRES_DB in docker-compose.yml
 
-# API key for the OpenAI or other LLM service.
-OPENAI_API_KEY="sk-xxxxxxxxxxxxxxxxxxxxxxxx"
-GROQ_API_KEY="tbd"
+REDIS__HOST="localhost"
+REDIS__PORT=6379
+REDIS__DB=0
 
-# API key for Cloudflare Turnstile for ensuring users are human
-TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
+# =============================================================================
+# Project Settings
+# =============================================================================
+PROJECT__NAME="Quizzical"
+PROJECT__API_PREFIX="/api"
+
+# =============================================================================
+# Agent and LLM Settings
+# =============================================================================
+AGENT__MAX_RETRIES=3
+DEFAULT_LLM_MODEL="gpt-4o"
+
+# Embedding model configuration for local HuggingFace usage
+EMBEDDING__MODEL_NAME="sentence-transformers/all-MiniLM-L6-v2"
+EMBEDDING__DIM=384
+EMBEDDING__DISTANCE_METRIC="cosine"
+EMBEDDING__COLUMN="synopsis_embedding"
+
+# =============================================================================
+# CORS and Turnstile
+# =============================================================================
+CORS__ORIGINS='["http://localhost:5173", "http://127.0.0.1:5173"]'
+ENABLE_TURNSTILE=False
