--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ requires-python = ">=3.11, <3.14" # CORRECTED: Added an upper bound to match the
 # --- Main Dependencies ---
 dependencies = [
     "fastapi>=0.116.1,<0.117.0",
+    "typing-extensions>=4.9.0",
     "pydantic>=2.11.7,<3.0.0",
     "uvicorn[standard]>=0.35.0,<0.36.0",
     "langgraph>=0.6.2,<0.7.0",
