--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "structlog>=25.4.0,<26.0.0",
     "psycopg>=3.1.18,<4.0.0",
     "sqlalchemy>=2.0.42,<3.0.0",
+    "asyncpg>=0.29.0,<0.30.0",
     "alembic>=1.16.4,<2.0.0",
     "pgvector>=0.4.1,<0.5.0",
     "pydantic-settings>=2.10.1,<3.0.0",
@@ -34,8 +35,9 @@ dependencies = [
     "langchain-core>=0.3.67,<0.4.0",
     "fal-client>=0.1.1",
     "langgraph-checkpoint-redis>=0.0.6",
-    "langchain-community (>=0.3.27,<0.4.0)",
-    "wikipedia (>=1.4.0,<2.0.0)"
+    "langchain-community>=0.3.27,<0.4.0",
+    "wikipedia (>=1.4.0,<2.0.0)",
+    "httpx>=0.28.0,<0.29.0",
 ]
 
 # --- Development Dependencies ---
@@ -43,7 +45,7 @@ dependencies = [
 dev = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
-    "httpx>=0.28.1",
+    "httpx>=0.28.0,<0.29.0",
     "ruff>=0.12.7",
     "black>=24.4.2",
     "isort>=5.13.2",
