updated CORS settings

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,5 +51,5 @@ EMBEDDING__COLUMN="synopsis_embedding"
 # =============================================================================
 # CORS and Turnstile
 # =============================================================================
-CORS__ORIGINS='["http://localhost:5173", "http://127.0.0.1:5173"]'
+CORS__ORIGINS='["http://localhost:5173", "http://127.0.0.1:5173, http://localhost:3000", "http://127.0.0.1:3000"]'
 ENABLE_TURNSTILE=False
