--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PROJECT_NAME="YOUR-AZURE-PROJECT-NAME"
-VITE_TURNSTILE_SITE_KEY=1x00000000000000000000AA
-VITE_TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
-APP_CONFIG_ENDPOINT=https://example-shared-appcs.azconfig.io
+POSTGRES_DB=quiz_db
+POSTGRES_USER=quiz_user
+POSTGRES_PASSWORD=a_very_secret_password
+PROJECT_NAME="quizzical"
+APP_CONFIG_ENDPOINT=https://quizzical-shared-appcs.azconfig.io
 APP_ENVIRONMENT=development
