--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,48 +1,101 @@
 # frontend/nginx.conf
 
+# Optional: gzip for static assets
+gzip on;
+gzip_comp_level 5;
+gzip_min_length 1024;
+gzip_types
+  text/plain
+  text/css
+  application/json
+  application/javascript
+  application/x-javascript
+  text/xml
+  application/xml
+  application/xml+rss
+  image/svg+xml
+  font/ttf
+  font/otf
+  application/vnd.ms-fontobject
+  application/font-woff
+  application/font-woff2;
+
 server {
   listen 80;
+  server_tokens off;
+
+  # Serve the built Vite app
   root /usr/share/nginx/html;
   index index.html;
 
-  # Proxy API requests to the backend container
+  # --- API proxy (same-origin) ---
+  # All /api/* requests are proxied to the backend container.
   location /api/ {
-    # In Docker Compose, 'backend' is the service name that resolves to the backend container
-    proxy_pass http://backend:8000;
-    
-    # Important proxy headers
+    proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-    
-    # Handle WebSocket connections if needed in the future
-    proxy_http_version 1.1;
+
+    # WebSocket support (future-proof)
     proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    
-    # Timeouts for long-running requests (quiz generation can take up to 60 seconds)
+    proxy_set_header Connection $connection_upgrade;
+
+    # Don't rewrite the path; keep /api/v1/... intact
+    proxy_pass http://quizzical-backend:8000;
+
+    # Reasonable timeouts for quiz generation and polling
     proxy_connect_timeout 60s;
-    proxy_send_timeout 60s;
-    proxy_read_timeout 60s;
+    proxy_send_timeout    60s;
+    proxy_read_timeout    60s;
+
+    # Avoid nginx changing Location headers
+    proxy_redirect off;
   }
 
-  # Serve the React app for all other routes
+  # --- Static assets: cache aggressively (hashed filenames) ---
+  location ~* \.(?:js|css|png|jpg|jpeg|gif|webp|ico|svg|woff2?|ttf|eot|otf)$ {
+    access_log off;
+    add_header Cache-Control "public, max-age=31536000, immutable";
+    expires 1y;
+    try_files $uri =404;
+  }
+
+  # Explicit manifest type + modest caching
+  location = /manifest.webmanifest {
+    add_header Cache-Control "public, max-age=86400";
+    default_type application/manifest+json;
+    try_files $uri =404;
+  }
+
+  # Favicon & logo (present in /public for Vite)
+  location = /favicon.ico {
+    add_header Cache-Control "public, max-age=604800";
+    try_files $uri =404;
+  }
+  location = /logo.svg {
+    add_header Cache-Control "public, max-age=604800";
+    try_files $uri =404;
+  }
+
+  # --- SPA fallback ---
+  # All other routes serve index.html so the React router can handle them.
   location / {
-    # This is the key part for SPAs:
-    # If a requested file or directory isn't found,
-    # fall back to serving /index.html.
-    try_files $uri $uri/ /index.html;
-    
-    # Security headers
+    # Security headers for HTML responses
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header X-XSS-Protection "1; mode=block" always;
+
+    # Prevent caching of the main HTML to always pick up new builds
+    add_header Cache-Control "no-store";
+
+    try_files $uri $uri/ /index.html;
   }
-  
-  # Cache static assets
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-    expires 30d;
-    add_header Cache-Control "public, immutable";
-  }
+}
+
+# Map for Connection header upgrade handling (WebSockets)
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  ''      close;
 }
