bug: configcontext map

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ POSTGRES_PASSWORD=a_very_secret_password
 PROJECT_NAME="quizzical"
 APP_CONFIG_ENDPOINT=https://quizzical-shared-appcs.azconfig.io
 APP_ENVIRONMENT=development
+PROJECT__API_PREFIX=/api/v1
