Fixed allowed origiins

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,11 @@ FAL_AI_KEY="your_fal_ai_key"
 GROQ_API_KEY="your_groq_api_key"
 
 # =============================================================================
+# Frontend Content (local overrides)
+# =============================================================================
+FRONTEND__CONTENT__APPNAME="Quizzical"  
+
+# =============================================================================
 # Database and Redis Settings
 # =============================================================================
 DATABASE__HOST="localhost"
@@ -51,5 +56,5 @@ EMBEDDING__COLUMN="synopsis_embedding"
 # =============================================================================
 # CORS and Turnstile
 # =============================================================================
-CORS__ORIGINS='["http://localhost:5173", "http://127.0.0.1:5173, http://localhost:3000", "http://127.0.0.1:3000"]'
+CORS__ORIGINS='["http://localhost:5173","http://127.0.0.1:5173","http://localhost:3000","http://127.0.0.1:3000"]'
 ENABLE_TURNSTILE=False
