updated environement management

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ POSTGRES_DB=quiz_db
 POSTGRES_USER=quiz_user
 POSTGRES_PASSWORD=a_very_secret_password
 PROJECT_NAME="quizzical"
-APP_CONFIG_ENDPOINT=https://quizzical-shared-appcs.azconfig.io
-APP_ENVIRONMENT=development
+APP_CONFIG_ENDPOINT=https://yourapp-config.azconfig.io
+APP_ENVIRONMENT=lcal
 PROJECT__API_PREFIX=/api/v1
